--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.2"
+    "@types/webpack-env": "^1.16.2",
+    "typescript": "^4.4.0-beta"
   },
   "devDependencies": {
     "rimraf": "^2.7.1",
-    "typescript": "^4.4.0-beta",
     "vue-router": "^4.0.10"
   }
 }
