--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "build": "tsc --project .",
     "prebuild": "rimraf dist"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.2",
+    "@types/webpack-env": "^1.16.2"
+  },
+  "devDependencies": {
     "typescript": "^4.4.2",
     "rimraf": "^3.0.2",
     "vue-router": "^4.0.11"
