--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "build": "tsc --project .",
     "prebuild": "rimraf dist"
   },
-  "dependencies": {
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.2"
-  },
   "devDependencies": {
-    "typescript": "^4.4.2",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.17.0",
+    "@vue/tsconfig": "^0.1.3",
     "rimraf": "^3.0.2",
-    "vue-router": "^4.0.11"
+    "typescript": "^4.7.2",
+    "vue": "^3.2.36",
+    "vue-router": "^4.1.2"
+  },
+  "peerDependencies": {
+    "vue-router": "^4.1.0"
   }
 }
